threading + file structure. Very good base

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,15 @@
 [package]
-name = "networking-basic"
+name = "networking_basic"
 version = "0.1.0"
 edition = "2021"
+
+[lib]
+name = "networking_basic"
+path = "src/lib.rs"
+
+[[bin]]
+name = "networking_basic"
+path = "src/main.rs"
 
 [dependencies]
 serde = { version = "1.0.217", features = ["derive"] }
