--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,4 +20,7 @@ clap = { version = "4.0", features = ["derive"] }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.137"
 thiserror = "2.0.11"
-tokio = { version = "1.43.0", features = ["full"] }
+
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+test-log = "0.2"
